<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">快客</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <string name="footer_btn_home">首页</string>
    <string name="footer_btn_order">订单</string>
    <string name="footer_btn_mine">我的</string>
    
    <string name="home_title">快客跑腿</string>
    <string name="order_title">我的订单</string>
    <string name="apply_quiker_title">申请快客跑腿人</string>
    <string name="order_manager_title">订单管理</string>
    <string name="message_title">我的消息</string>
    <string name="settings_title">设置中心</string>
    <string name="feedback_title">意见反馈</string>
    <string name="check_version">版本更新</string>
    <string name="voice_alert">声音提醒</string>
    <string name="vibration_alert">震动提醒</string>
    <string name="receive_message">接收消息推送</string>
    <string name="modify_password">修改登录密码</string>
    <string name="clear_cache">清除缓存</string>
    <string name="about">关于快客</string>
    <string name="exit">退出系统</string>
    <string name="tab_order_execute">进行中订单</string>
    <string name="tab_order_complete">已完成订单</string>
    <string name="tab_order_cancel">已取消订单</string>
    <string name="send_order_text">无忧下单</string>
    <string name="receive_order_text">抢单赚钱</string>

</resources>